<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.asuss.blackjack3.Glowna"
    tools:showIn="@layout/activity_glowna"
    android:background="@drawable/blackjack2">

    <Button
        android:layout_width="110sp"
        android:layout_height="60sp"
        android:text="@string/start"
        android:id="@+id/start"
        android:onClick="start"
        android:background="@drawable/yellow"
        android:visibility="invisible"
        android:layout_alignBottom="@+id/radioGroup"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:text="@string/ilosc_talii"
        android:id="@+id/ilosc_talii"
        android:textColor="#dbd14a"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <RadioGroup
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        android:layout_below="@+id/ilosc_talii"
        android:layout_alignStart="@+id/ilosc_talii">

        <RadioButton
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:id="@+id/radio2"
            android:text="@string/cztery_talie"
            android:textColor="#dbd14a"
            android:textSize="25sp"
            android:layout_marginTop="10dp"
            android:onClick="poziom_trudnosci" />

        <RadioButton
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:id="@+id/radio1"
            android:text="@string/dwie_talie"
            android:textColor="#dbd14a"
            android:textSize="25sp"
            android:layout_marginTop="10sp"
            android:onClick="poziom_trudnosci" />
    </RadioGroup>

</RelativeLayout>
