<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_zaklad"
    tools:context="com.example.asuss.blackjack3.Zaklad"
    android:id="@+id/relative_layout"
    android:background="#009702">

    <LinearLayout
        android:id="@+id/cardline1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:layout_above="@+id/suma2"
        android:layout_alignParentEnd="true">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/cardline3"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:layout_above="@+id/linearLayout4"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="true"
        android:focusableInTouchMode="false">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/cardline2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:layout_below="@+id/suma_przeciwnika"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20sp">
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cardline4"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:layout_below="@+id/cardline2"
        android:layout_toEndOf="@+id/textView"
        android:layout_alignParentStart="true">

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:id="@+id/komunikat"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="#000000"
        android:layout_below="@+id/cardline3"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:id="@+id/komunikat2"
        android:textSize="20sp"
        android:textColor="#000000"
        android:textAlignment="center"
        android:layout_toStartOf="@+id/za_ile"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="false"
        android:layout_above="@+id/komunikat" />

<LinearLayout
    android:layout_width="120sp"
    android:layout_height="70sp"
    android:orientation="vertical"
    android:layout_above="@+id/bbudzet"
    android:layout_alignParentStart="true"
    android:id="@+id/linearLayout2"
    android:textAlignment="viewEnd">

    <Button
    android:layout_width="120sp"
    android:layout_height="30sp"
    android:text="@string/Rozdwojenie"
    android:id="@+id/rozdwojenie"
    android:textColor="#000000"
    android:background="@drawable/yellow"
    android:clickable="true"
    android:nestedScrollingEnabled="true"
    android:onClick="rozdwojenie"
        android:visibility="invisible" />

    <Button
        android:layout_width="120sp"
        android:layout_height="30sp"
        android:text="@string/Podwojenie"
        android:id="@+id/podwojenie"
        android:onClick="podwojenie"
        android:textColor="#000000"
        android:background="@drawable/yellow"
        android:clickable="true"
        android:visibility="invisible" />
</LinearLayout>

    <LinearLayout
        android:layout_width="90sp"
        android:layout_height="70sp"
        android:orientation="vertical"
        android:layout_above="@+id/bbudzet"
        android:layout_alignEnd="@+id/komunikat"
        android:id="@+id/linearLayout4">

    <Button
        android:layout_width="90sp"
        android:layout_height="30sp"
        android:text="@string/Dobierz"
        android:id="@+id/dobierz"
        android:textColor="#000000"
        android:background="@drawable/yellow"
        android:onClick="dobierz"
        android:clickable="true" />

        <Button
            android:layout_width="90sp"
            android:layout_height="30sp"
            android:text="@string/Nie"
            android:id="@+id/nie"
            android:textColor="#000000"
            android:background="@drawable/yellow"
            android:onClick="nie"
            android:clickable="true" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Zakład"
        android:textSize="20sp"
        android:id="@+id/textView"
        android:textColor="#000000"
        android:layout_below="@+id/cardline4"
        android:layout_toEndOf="@+id/linearLayout2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/za_ile"
        android:textColor="#000000"
        android:textSize="20sp"

        android:textAlignment="textStart"
        android:layout_alignTop="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:layout_marginLeft="10sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20sp"
        android:id="@+id/suma"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textSize="15sp"
        android:layout_marginLeft="10sp"
        android:layout_above="@+id/cardline1"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20sp"
        android:id="@+id/suma2"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textAlignment="textStart"
        android:layout_marginLeft="10sp"
        android:layout_above="@+id/cardline3"
        android:layout_alignEnd="@+id/cardline3" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20sp"
        android:id="@+id/suma_przeciwnika"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textSize="15sp"
        android:layout_marginLeft="10sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:id="@+id/bbudzet"
        android:textColor="#000000"
        android:textAlignment="center"
        android:textSize="20sp"
        android:background="@drawable/gray"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:id="@+id/komunikat1"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:layout_above="@+id/suma2"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/suma2"
        android:layout_alignStart="@+id/suma2" />

</RelativeLayout>
